[Task 70080] applied feedback to the scripts and processes functionality